# hone

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
.hone/runs/2026-03-23_190242/: report.html  run.json
.hone/runs/2026-03-23_190242/snapshots/190242_d767/examples/log_parser/: process_logs.py
.hone/runs/2026-03-23_190242/snapshots/190257_c4e0/examples/log_parser/: process_logs.py
.hone/runs/2026-03-23_190242/snapshots/190333_ce6e/examples/log_parser/: process_logs.py
.hone/runs/2026-03-23_190242/snapshots/190341_1a38/examples/log_parser/: process_logs.py
.hone/runs/2026-03-23_190242/snapshots/190410_9fd4/examples/log_parser/: process_logs.py
.hone/runs/2026-03-23_190242/snapshots/190424_d7a5/examples/log_parser/: process_logs.py
.hone/runs/2026-03-23_190242/snapshots/190439_2e3a/examples/log_parser/: process_logs.py
.hone/runs/2026-03-23_193401/: report.html  run.json
.hone/runs/2026-03-23_193401/snapshots/193410_3492/examples/distance_calc/: closest_drivers.py
.hone/runs/2026-03-23_193401/snapshots/193718_1dbc/examples/distance_calc/: closest_drivers.py
.hone/runs/2026-03-23_194137/: report.html  run.json
examples/distance_calc/: bench_distance.py  closest_drivers.py
examples/log_parser/: bench_logs.py  process_logs.py
examples/name_parser/: eval_parser.py  parser.py
hone/: __init__.py  benchmark.py  llm.py  log.py  loop.py  main.py  report.py  sandbox.py  snapshot.py
tests/: test_benchmark.py  test_loop.py  test_sandbox.py  test_snapshot.py
(+3 files in other folders)
