[project]
name = "hone-ai"
version = "1.1.0"
authors = [
  { name="Lakshmanan Meiyappan", email="your-email@example.com" },
]
description = "A tool for autonomous code optimization and agentic loops"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "anthropic",
    "openai",
    "ollama",
    "rich",
    "python-dotenv",
]

[project.scripts]
hone = "hone.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
